# CommandLineInterface

./: CMakeLists.txt  fajl.txt  main.cpp
AbstractCommands/: arg_command.cpp  arg_command.hpp  command.cpp  command.hpp  file_command.cpp  file_command.hpp  opt_command.hpp  time_command.cpp  time_command.hpp
Commands/: batch.cpp  batch.hpp  date.cpp  date.hpp  echo.cpp  echo.hpp  head.cpp  head.hpp  prompt.cpp  prompt.hpp  rm.cpp  rm.hpp  time.cpp  time.hpp  touch.cpp  touch.hpp  tr.cpp  tr.hpp  truncate.cpp  truncate.hpp  wc.cpp  wc.hpp
Emulator/: emulator.cpp  emulator.hpp
